# nap-crawler

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: lint.yml
napcrawler/: app.py  crawler.py  create_logger.py  setting.py
napcrawler/core/: crawler.py  exporter.py  item.py
